Bug 152878 - FILEOPEN RTF Grouped shape opens with ghost shape and frame
Summary: FILEOPEN RTF Grouped shape opens with ghost shape and frame
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.4.3.2 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.8.0
Keywords: bibisected, bisected
: 158672 (view as bug list)
Depends on:
Blocks: RTF-Shapes
  Show dependency treegraph
 
Reported: 2023-01-04 15:15 UTC by Gabor Kelemen (Collabora)
Modified: 2025-02-03 21:00 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Word 2016 (deleted)
2023-01-04 15:15 UTC, Gabor Kelemen (Collabora)
Details
Updated example file (58.04 KB, application/rtf)
2023-11-28 13:53 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2023-01-04 15:15:43 UTC
Created attachment 184485 [details]
Example file from Word 2016

Attached RTF document contains a grouped shape, with a table inside one of them.
When opened in Writer, one of them becomes a ghost shape object with an icon and a red "Shape 1" text. Grouping is also lost, the internal shape becomes a frame object.

1. Open attached document in Writer.

Observe the Shape 1 object now visible instead of the grouping shape (red border).
It would be nice to import the grouped objects properly.

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 44355a90b3450111ad87ad4b6607a564e41d7b54
CPU threads: 14; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (hu_HU); UI: en-US
Calc: threaded

This started in 7.5 with

https://git.libreoffice.org/core/+/57d9cc81b058757421cd082e5dbe32a919716807

author	Vasily Melenchuk <vasily.melenchuk@cib.de>	Tue Aug 30 15:42:44 2022 +0300
committer	Miklos Vajna <vmiklos@collabora.com>	Thu Sep 01 20:35:28 2022 +0200

tdf#127806: RTF import: use shape dimensions for pib picture

It was not good before either, just differently bad.
Comment 1 Roman Kuznetsov 2023-01-04 22:11:21 UTC
repro in

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: ec2f1d73936c9d8cee83c0887170e9ecb8f044ba
CPU threads: 16; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: ru-RU (ru_RU); UI: en-US
Calc: CL threaded
Comment 2 Rainer Bielefeld Retired 2023-01-06 06:28:23 UTC
Effect is  REPRODUCIBLE with reporter's sample document and Installation of Version:7.4.2.3 (x64) 
Build ID: 382eef1f22670f7f4118c8c2dd222ec7ad009daf
CPU threads: 12; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: de-DE |  Calc: threaded | ElementaryTheme | My normal User Profile	

That differs from original report
Comment 3 Rainer Bielefeld Retired 2023-01-06 06:32:53 UTC
NOT reproducible with Server Installation of Version: 6.0.7.3 (x64) 
Build-ID dc89aa7a9eabfd848af146d5086077aeed2ae4a5; CPU-Threads: 12; BS: Windows 10.0; UI-Render: GL; Gebietsschema: de-DE (de_DE); Calc: CL, Special devUserProfile
Comment 4 Gabor Kelemen (Collabora) 2023-11-28 13:53:20 UTC
Created attachment 191089 [details]
Updated example file
Comment 5 Xisco Faulí 2023-11-29 13:20:27 UTC
The content of attachment 184485 [details] has been deleted for the following reason:

User's request
Comment 6 Commit Notification 2024-03-13 21:12:11 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/aba13d6b4b2d586b356e7b98a23a7796e30c37ec

tdf#152878 switch off replacment image in picture frame

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Gabor Kelemen (Collabora) 2025-02-03 21:00:08 UTC
*** Bug 158672 has been marked as a duplicate of this bug. ***